feat: prepare for Render deployment